# infra-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  settings.toml
.cargo/: config.toml
.github/workflows/: deploy-k8s-legacy.yml  deploy-k8s.yml
doc/: apitest.md  errorcode.md  sysdesign.md
doc/api/: auth-test.md  user-test.md
doc/api/notify/: sms.md
doc/api/pay/alipay/: alipay_callback.md
doc/api/user/: auth-test.md  user-test.md
doc/api/utils/: id.md
doc/deploy/deployment/: infra-server-service.yaml
doc/deploy/service/: infra-server-service.yaml
doc/deploy/statefulset/: infra-server-service.yaml
doc/startup/: startup.md
scripts/diesel/: diesel-dolphin-model.sh  diesel-dolphin-schema.sh  diesel-dolphin.toml
src/: main.rs  swagger_docs.rs  types.rs
src/common/cache/: user_cache.rs
src/composite/: mod.rs
src/composite/pay/: mod.rs
src/composite/pay/alipay/: alipay_callback_handler.rs  mod.rs  pay_impl.rs
src/composite/pay/paypal/: mod.rs  paypal_impl.rs
src/composite/pay/wechat/: mod.rs  wechat_pay_impl.rs
src/composite/user/: mod.rs  user_comp.rs  user_product_sub_handler.rs
src/controller/: mod.rs
src/controller/goods/: goods_controller.rs  mod.rs
src/controller/monitor/: health_controller.rs
src/controller/notify/sms/: aliyun_sms_controller.rs  mod.rs
src/controller/order/: auto_expire.rs  mod.rs  order_controller.rs
src/controller/pay/: mod.rs  pay_controller.rs
src/controller/pay/alipay/: alipay_controller.rs  alipay_notify_controller.rs  mod.rs
src/controller/pay/paypal/: mod.rs  paypal_controller.rs
src/controller/pay/wechat/: mod.rs  wechat_pay_controller.rs
src/controller/user/: auth_controller.rs  handler.rs  mod.rs  rd_user.rs  user_controller.rs
src/controller/utils/: id_controller.rs  mod.rs  snowflake.rs
src/model/: mod.rs
src/model/diesel/: mod.rs
src/model/diesel/custom/: mod.rs
src/model/diesel/custom/notify/: mod.rs  sms_log_add.rs
src/model/diesel/custom/oauth/: mod.rs  oauth_add.rs
src/model/diesel/custom/order/: mod.rs  order_add.rs  order_item_add.rs
src/model/diesel/custom/pay/: mod.rs  payment_add.rs
src/model/diesel/custom/user/: mod.rs  user_add.rs  user_sub_add.rs
src/model/diesel/dolphin/: custom_dolphin_models.rs  dolphin_models.rs  dolphin_schema.rs  mod.rs
src/model/pay/: alipay_order_biz_content.rs  mod.rs
src/model/pay/callback/: alipay_callback.rs  mod.rs
src/model/req/: mod.rs
src/model/req/goods/: goods_req.rs  iap_goods_req.rs  mod.rs
src/model/req/notify/sms/: login_sms_verify_req.rs  mod.rs  sms_req.rs  sms_verify_req.rs
src/model/req/order/: mod.rs  order_status_req.rs  user_order_query_params.rs
src/model/req/pay/alipay/: alipay_order_req.rs  mod.rs
src/model/req/user/: mod.rs
src/model/req/user/auth/: access_token_refresh_req.rs  mod.rs
src/model/req/user/edit/: change_pwd_req.rs  edit_user_params.rs  mod.rs
src/model/req/user/login/: login_req.rs
src/model/req/user/pwd/: mod.rs  reset_pwd_req.rs
src/model/req/user/query/: mod.rs  user_query_params.rs
src/model/req/user/reg/: mod.rs  reg_req.rs
src/model/resp/: mod.rs
src/model/resp/auth/: auth_resp.rs  mod.rs
src/model/resp/goods/: goods_resp.rs  mod.rs
src/model/resp/order/: mod.rs  order_page_resp.rs  order_status_resp.rs
src/model/resp/pay/alipay/: mod.rs  order_resp.rs
src/model/user/login/: login_req.rs
src/service/: mod.rs
src/service/app/: app_map_service.rs  app_service.rs  mod.rs
src/service/captcha/: mod.rs  turnstile_service.rs
src/service/goods/: goods_service.rs  mod.rs
src/service/monitor/: alert_service.rs
src/service/notify/: mod.rs  sms_config_service.rs  sms_log_service.rs  sms_service.rs
src/service/oauth/: mod.rs  oauth_service.rs
src/service/order/: mod.rs  order_item_service.rs  order_service.rs
src/service/pay/alipay/: alipay_service.rs
src/service/pay/sys/: payment_service.rs
src/service/user/: mod.rs  user_service.rs  user_sub_service.rs
