[package]
name = "infra-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "4"
actix-web-validator = "5.0.1"
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "main", features = [
    "model",
    "common",
    "rwconfig",
    "texhub"
] }
validator = { version = "0.16.1", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "64-column-tables",
    "chrono",
    "serde_json",
] }
uuid = {version = "1.4.1",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
sha256 = "1.5.0"
chrono = "0.4"
log4rs = "1.2.0"
log = "0.4.0"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web", "debug-embed"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }