[package]
name = "infra-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3"
actix-web = "4.11.0"
actix-web-validator = "5.0.1"
rust_wheel = { git = "https://github.com/RedDwarfTech/rust_wheel.git", features = [
    "model",
    "common",
    "rwconfig",
    "texhub",
    "alipay",
] }
validator = { version = "0.16.1", features = ["derive"] }
diesel = { version = "2.2.12", features = [
    "postgres",
    "64-column-tables",
    "chrono",
    "serde_json",
    "numeric",
    "network-address"
] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
sha256 = "1.5.0"
chrono = "0.4"
log4rs = "1.2.0"
log = "0.4.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
    "debug-embed",
] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
lazy_static = "1.4.0"
# https://github.com/diesel-rs/diesel/issues/1879
bigdecimal = { version = "0.4", features = ["serde"] }
labrador = { git = "https://github.com/jiangxiaoqiang/labrador.git", features = [
    "alipay",
    "wechat",
] }
rustflake = "0.1.1"
serde_qs = "0.13"
base64 = "0.13.0"
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"
jsonwebtoken = "8.3.0"
fancy-regex = "0.13.0"
paypal-rs = "0.2.5"
thiserror = "1.0.61"
openssl = "*"
openssl-probe = "0.1.2"
alibaba-cloud-sdk-rust = { git = "https://github.com/jiangxiaoqiang/alibaba-cloud-sdk-rust.git" }
gostd = "0.3.18"
rand = "0.8"
anyhow = "1.0.86"
ipnetwork = { version = "0.21.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
